Add tests for FindCommandParser